getting structured outputs using the parser

--- a/src/starter_notebooks/LCEL/lc_prompt_templates_part2.ipynb
+++ b/src/starter_notebooks/LCEL/lc_prompt_templates_part2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "id": "9bd0ce42",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "id": "3a06c9a2",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
     "topics = [\"cats\", \"dogs\", \"birds\"]\n",
     "\n",
     "for topic in topics:\n",
-    "    chain = prompt | llm | output_parser\n",
+    "    chain = prompt | llm | output_parser1\n",
     "    print(chain.invoke({\"topic\": topic}))\n",
     "    print(\"---\")\n",
     "\n",
@@ -306,16 +306,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "8f0d8494",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Cat', \"Purr-haps you'll let me in?\"]\n",
+      "---\n",
+      "['Knock knock', \"who's there?\", 'Ruff', 'Ruff who?', 'Ruff day without treats.']\n",
+      "---\n",
+      "['Birds', 'chirping', 'flying high']\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = PromptTemplate(\n",
+    "    template=\"Answer the user query.\\n{format_instructions}\\nTell me a knock knock joke about {topic}\\n\",\n",
+    "    input_variables=[\"query\"],  # Dynamic variables that will be provided when invoking the chain\n",
+    "    partial_variables={\"format_instructions\": format_instructions2},  # Static variables set once when creating the prompt\n",
+    ")\n",
+    "\n",
+    "\n",
+    "topics = [\"cats\", \"dogs\", \"birds\"]\n",
+    "\n",
+    "for topic in topics:\n",
+    "    chain = prompt | llm | output_parser2\n",
+    "    print(chain.invoke({\"topic\": topic}))\n",
+    "    print(\"---\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae8f7812",
+   "metadata": {},
+   "source": [
+    "### CSV output parser - recipe suggestions"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "69f8fad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "India: ['Here is the list of required ingredients for Chicken Tikka Masala:', 'Chicken breast', 'Yogurt', 'Lemon juice', 'Garam masala', 'Cumin powder', 'Coriander powder', 'Cayenne pepper', 'Salt', 'Black pepper', 'Vegetable oil', 'Tomato puree', 'Heavy cream', 'Butter', 'Garlic', 'Ginger', 'Onion', 'Tomato']\n",
+      "---\n",
+      "Italy: ['Spaghetti', 'Minced beef', 'Onion', 'Carrot', 'Celery', 'Garlic', 'Olive oil', 'Tomato paste', 'Red wine', 'Beef stock', 'Tomato puree', 'Salt', 'Black pepper', 'Sugar', 'Fresh basil', 'Parmesan cheese']\n",
+      "---\n",
+      "Mexico: ['Here is the list of required ingredients for Tacos al Pastor:', 'Pork shoulder', 'Onion', 'Garlic', 'Cumin', 'Coriander', 'Chili powder', 'Oregano', 'Lime juice', 'Olive oil', 'Pineapple chunks', 'Cilantro', 'Salt', 'Pepper ', \"Let me know if you'd like any substitutions or variations!\"]\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnableLambda\n",
+    "from langchain_core.output_parsers import JsonOutputParser, CommaSeparatedListOutputParser\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# Define Pydantic model\n",
+    "class Recipe(BaseModel):\n",
+    "    name: str = Field(description=\"name of the recipe\")\n",
+    "    cuisine: str = Field(description=\"cuisine type of the recipe\")\n",
+    "    ingredients: str = Field(description=\"list of ingredients for the recipe\")\n",
+    "\n",
+    "# Parsers\n",
+    "json_parser = JsonOutputParser(pydantic_object=Recipe)\n",
+    "csv_parser = CommaSeparatedListOutputParser()\n",
+    "\n",
+    "# Prompts\n",
+    "prompt1 = PromptTemplate(\n",
+    "    template=\"Answer the user query.\\n{format_instructions}\\nProvide a recipe belonging to a certain cuisine and the required ingredient for the following country: {country}\",\n",
+    "    input_variables=[\"country\"],\n",
+    "    partial_variables={\"format_instructions\": json_parser.get_format_instructions()},\n",
+    ")\n",
+    "\n",
+    "prompt2 = PromptTemplate(\n",
+    "    template=\"Answer the query.\\n{format_instructions_csv}\\nGiven the recipe name {recipe}, provide a list of required ingredients. Do not add any introduction or explanation.\",\n",
+    "    input_variables=[\"recipe\"],\n",
+    "    partial_variables={\"format_instructions_csv\": csv_parser.get_format_instructions()},\n",
+    ")\n",
+    "\n",
+    "# Extract recipe name from parsed JSON\n",
+    "extract_recipe_name = RunnableLambda(lambda x: {\"recipe\": Recipe(**x).name} if isinstance(x, dict) else {\"recipe\": x.name})\n",
+    "\n",
+    "\n",
+    "# Build chain\n",
+    "full_chain = (\n",
+    "    prompt1\n",
+    "    | llm\n",
+    "    | json_parser\n",
+    "    | extract_recipe_name\n",
+    "    | prompt2\n",
+    "    | llm\n",
+    "    | csv_parser\n",
+    ")\n",
+    "\n",
+    "# Run chain\n",
+    "for country in [\"India\", \"Italy\", \"Mexico\"]:\n",
+    "    result = full_chain.invoke({\"country\": country})\n",
+    "    print(f\"{country}: {result}\")\n",
+    "    print(\"---\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "726ac7c8",
    "metadata": {},
    "outputs": [],
    "source": []
