--- a/src/starter_notebooks/langchain/lc_prompt_templates_part2.ipynb
+++ b/src/starter_notebooks/langchain/lc_prompt_templates_part2.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "69f8fad4",
    "metadata": {},
    "outputs": [
@@ -358,11 +358,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "India: ['Here is the list of required ingredients for Chicken Tikka Masala:', 'Chicken breast', 'Yogurt', 'Lemon juice', 'Garam masala', 'Cumin powder', 'Coriander powder', 'Cayenne pepper', 'Salt', 'Black pepper', 'Vegetable oil', 'Tomato puree', 'Heavy cream', 'Butter', 'Garlic', 'Ginger', 'Onion', 'Tomato']\n",
+      "India: ['Chicken breast', 'Yogurt', 'Lemon juice', 'Garam masala', 'Cumin powder', 'Coriander powder', 'Cayenne pepper', 'Salt', 'Black pepper', 'Vegetable oil', 'Tomato puree', 'Heavy cream', 'Butter', 'Garlic', 'Ginger', 'Onion', 'Fresh cilantro']\n",
       "---\n",
-      "Italy: ['Spaghetti', 'Minced beef', 'Onion', 'Carrot', 'Celery', 'Garlic', 'Olive oil', 'Tomato paste', 'Red wine', 'Beef stock', 'Tomato puree', 'Salt', 'Black pepper', 'Sugar', 'Fresh basil', 'Parmesan cheese']\n",
+      "Italy: ['Ground beef', 'Onion', 'Garlic', 'Carrot', 'Celery', 'Tomato paste', 'Canned tomatoes', 'Olive oil', 'Salt', 'Black pepper', 'Italian seasoning', 'Red wine (optional)', 'Parmesan cheese', 'Spaghetti']\n",
       "---\n",
-      "Mexico: ['Here is the list of required ingredients for Tacos al Pastor:', 'Pork shoulder', 'Onion', 'Garlic', 'Cumin', 'Coriander', 'Chili powder', 'Oregano', 'Lime juice', 'Olive oil', 'Pineapple chunks', 'Cilantro', 'Salt', 'Pepper ', \"Let me know if you'd like any substitutions or variations!\"]\n",
+      "Mexico: ['Pork shoulder', 'Onion', 'Garlic', 'Cumin', 'Coriander', 'Chili powder', 'Oregano', 'Lime juice', 'Olive oil', 'Pineapple chunks', 'Red onion', 'Cilantro', 'Salt', 'Pepper', 'Tortillas', 'Pita bread', 'Skewers']\n",
       "---\n"
      ]
     }
@@ -420,8 +420,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "726ac7c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'country': 'India', 'recipe': 'Butter Chicken', 'ingredients': ['Tomato puree', 'Yogurt', 'Garam masala', 'Cumin powder', 'Coriander powder', 'Red chili powder', 'Salt', 'Ginger paste', 'Garlic paste', 'Lemon juice', 'Butter', 'Vegetable oil', 'Chicken breast', 'Kasoori methi', 'Fresh cilantro']}\n",
+      "{'country': 'Italy', 'recipe': 'Spaghetti Carbonara', 'ingredients': ['Spaghetti', 'bacon', 'eggs', 'parmesan cheese', 'black pepper', 'salt']}\n",
+      "{'country': 'Mexico', 'recipe': 'Chiles Rellenos', 'ingredients': ['Roasted poblano peppers', 'Queso Oaxaca cheese', 'beaten eggs', 'milk', 'all-purpose flour', 'vegetable oil', 'Salt', 'Pepper', 'Onion', 'Garlic', 'Tomato', 'Fresh cilantro']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnableLambda, RunnableMap\n",
+    "from langchain_core.output_parsers import StrOutputParser, CommaSeparatedListOutputParser\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# Set up parsers\n",
+    "recipe_parser = StrOutputParser()\n",
+    "csv_parser = CommaSeparatedListOutputParser()\n",
+    "\n",
+    "# Prompts\n",
+    "prompt1 = PromptTemplate.from_template(\"Provide only the name of a famous recipe from {country}. Do not add any other text.\")\n",
+    "prompt2 = PromptTemplate.from_template(\n",
+    "    \"Answer the query.\\n{format_instructions_csv}\\nGiven the recipe name {recipe}, provide a list of required ingredients. Do not add any introduction or explanation.\"\n",
+    ")\n",
+    "\n",
+    "# Add format instructions\n",
+    "prompt2 = prompt2.partial(format_instructions_csv=csv_parser.get_format_instructions())\n",
+    "\n",
+    "# Chain pieces\n",
+    "get_recipe_name = prompt1 | llm | recipe_parser\n",
+    "store_recipe_name = RunnableLambda(lambda name: {\"recipe\": name.strip()})\n",
+    "\n",
+    "# Create a full pipeline that keeps all data\n",
+    "full_chain = (\n",
+    "    RunnableLambda(lambda x: {\"country\": x[\"country\"]})  # Step 1 input\n",
+    "    | RunnableLambda(lambda x: {**x, \"recipe\": get_recipe_name.invoke(x)})  # Add recipe name\n",
+    "    | RunnableLambda(lambda x: {**x, \"ingredients\": csv_parser.invoke(llm.invoke(prompt2.format(recipe=x[\"recipe\"])))})  # Add ingredients\n",
+    ")\n",
+    "\n",
+    "# Run\n",
+    "for country in [\"India\", \"Italy\", \"Mexico\"]:\n",
+    "    result = full_chain.invoke({\"country\": country})\n",
+    "    print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd62278e",
    "metadata": {},
    "outputs": [],
    "source": []
